Fixes for MobyGames (v2 of the API)