@@ -25,6 +25,7 @@
 
 package org.datacrow.core.services;
 
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -259,7 +260,7 @@ public abstract class SearchTask extends Thread {
     public DcObject query(DcObject dco) throws Exception {
         String link = (String) dco.getValue(DcObject._SYS_SERVICEURL); 
         if (link != null && link.length() > 0) {
-            DcObject item = getItem(new URL(link));
+            DcObject item = getItem(new URI(link).toURL());
             
             item = item == null ? dco : item;
             
